[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = rhamt-integration-tests
description = Testing Framework for Red Hat Application Migration Toolkit
license = GNU General Public License v3.0
long_description = file: README.rst
long_description_content_type = text/x-rst
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.txt
setup_requires = setuptools_scm>=3.0.0
install_requires=
    attrs
    cached_property
    click
    fauxfactory
    ipython
    pre-commit
    pytest
    selenium
    taretto
    wait_for
    werkzeug
    webdriver_kaifuku
    yaycl

[options.package_data]
* = *.txt, *.rst
