[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = mta-integration-tests
description = Testing Framework for Red Hat Application Migration Toolkit
license = Eclipse Public License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.txt
setup_requires = setuptools_scm>=3.0.0
install_requires=
    attrs
    cached_property
    click
    docker
    fauxfactory
    importlib-metadata==1.6.0
    ipython
    jupyter
    pre-commit
    pytest
    pytest-rerunfailures
    selenium
    taretto
    wait_for
    werkzeug
    webdriver_kaifuku
    yaycl

[options.package_data]
* = *.txt, *.md
